SP/ update language swither UI with pics, change bg with local pic

--- a/src/app/shared/ui/language-switcher/language-switcher.component.html
+++ b/src/app/shared/ui/language-switcher/language-switcher.component.html
@@ -1,4 +1,8 @@
 <ul>
-    <li (click)="switchTo('fr')">Fr</li>
-    <li (click)="switchTo('en')">En</li>
+    <li (click)="switchTo('fr')">
+        <img src="../../assets/images/flag-1.svg" width="26" alt="french flag" title="Français">
+    </li>
+    <li (click)="switchTo('en')">
+        <img src="../../assets/images/uk.svg" width="26" alt="english flag" title="English">
+    </li>
 </ul>
