--- a/src/app/shared/ui/language-switcher/language-switcher.component.scss
+++ b/src/app/shared/ui/language-switcher/language-switcher.component.scss
@@ -2,13 +2,13 @@ ul{
     display: flex;
     list-style-type: none;
     justify-content: space-around;
-    width: 60px;
+    width: 80px;
     z-index: 999;
     li{
         cursor: pointer;
         color:#fff;
-        &:hover{
-            color: skyblue;
+       img:hover{
+            transform: scale(1.16);
         }
     }
 }
