--- a/src/app/shared/ui/top-menu/top-menu.component.scss
+++ b/src/app/shared/ui/top-menu/top-menu.component.scss
@@ -40,5 +40,10 @@ header{
             cursor: pointer;
         }
        }
+       .action{
+           width: 120px;
+           display: flex;
+           justify-content: space-around;
+       }
     }
 }
