"myAccount page created with functional form + I get the username from userService. Next step = bidouiller userInterface to get the other information from the user from the Back"

--- a/src/app/shared/ui/top-menu/top-menu.component.html
+++ b/src/app/shared/ui/top-menu/top-menu.component.html
@@ -10,14 +10,20 @@
             </li>
             <li *ngIf="!userService.user">
                 <a [routerLink]="['login']">
-                    <mat-icon class="my-icons">lock </mat-icon>
+                    <mat-icon class="my-icons">lock</mat-icon>
                     Login
                 </a>
             </li>
             <li *ngIf="userService.user" class="connected-as">
                 <a (click)="doLogout()" [routerLink]="['home']">
-                    <mat-icon class="my-icons">lock_open </mat-icon>
+                    <mat-icon class="my-icons">lock_open</mat-icon>
                     Logout
+                </a>
+            </li>
+            <li *ngIf="userService.user" class="connected-as">
+                <a [routerLink]="['myAccount']">
+                    <mat-icon class="my-icons">assignment_ind</mat-icon>
+                    My Account
                 </a>
             </li>
             <li *ngIf="user">
@@ -25,7 +31,7 @@
             </li>
             <li>
                 <a [routerLink]="['register']" >
-                    <mat-icon class="my-icons">face </mat-icon>
+                    <mat-icon class="my-icons">face</mat-icon>
                     Register
                 </a>
             </li>
