--- a/src/app/pages/my-account/my-account.component.html
+++ b/src/app/pages/my-account/my-account.component.html
@@ -9,11 +9,10 @@
 
     <mat-form-field class=""> 
         <mat-label>{{ 'myAccountForm.firstName.fieldTitle' | translate }}</mat-label>
-        <input 
-          matInput 
-          type="text"
+        <input matInput type="text"
           placeholder="{{ 'registerForm.firstName.placeholder' | translate }}"
           formControlName="firstName"
+          value="Sushi"
         >
         <mat-error *ngIf="firstName.invalid">
           {{ 'myAccountForm.firstName.fieldRequired' | translate }}
