"retrieved idUser from the Back"

--- a/src/app/pages/my-account/my-account.component.html
+++ b/src/app/pages/my-account/my-account.component.html
@@ -1,6 +1,6 @@
 <h1>{{ 'myAccountForm.title' | translate | uppercase}}</h1>
 
-<p> {{ 'myAccountForm.id' | translate}} <i>"id à récupérer depuis le Back"</i><br>
+<p> {{ 'myAccountForm.id' | translate}} <i>{{ idUser }}</i><br>
     {{ 'myAccountForm.username' | translate }} {{ username }}
 </p>
 
