"stuff works BUT I need to change the registration parameters now"

--- a/src/app/pages/my-account/my-account.component.html
+++ b/src/app/pages/my-account/my-account.component.html
@@ -52,6 +52,9 @@
       </mat-error>
     </mat-form-field>
   
+
+    <p> {{ 'myAccountForm.isAdmin' | translate}} <i>{{ isAdmin }}</i><br>
+
     <button 
     mat-raised-button 
     (click)="becomeAdmin()"
