upload new movie partially working (title and year)

--- a/src/app/core/pages/add-movie/add-movie.component.html
+++ b/src/app/core/pages/add-movie/add-movie.component.html
@@ -36,9 +36,9 @@
       placeholder="Original Title"
       formControlName="originalTitle"
     >
-    <!-- <mat-error *ngIf="year.touched && year.invalid">
+    <mat-error *ngIf="year.touched && year.invalid">
      Original is required
-    </mat-error> -->
+    </mat-error>
   </mat-form-field>
  
   <mat-form-field class = "">
