dynamic max date for upload movie

--- a/src/app/core/pages/add-movie/add-movie.component.html
+++ b/src/app/core/pages/add-movie/add-movie.component.html
@@ -24,8 +24,9 @@
       formControlName="year"
     >
     <mat-error *ngIf="year.touched && year.invalid">
-     Release date is required
+     Release date is required and Can't greater than current year
     </mat-error>
+ 
   </mat-form-field>
  
   <mat-form-field class = "">
