--- a/src/app/pages/movie/movie.component.html
+++ b/src/app/pages/movie/movie.component.html
@@ -17,8 +17,8 @@
         <mat-form-field class="form-field">
             <!-- <mat-label>Search a movie, actress, director...</mat-label> -->
             <mat-label>Modify the synopsis</mat-label>
-            <textarea rows="8" cols="20" class="synopsis-input" matInput type="synopsis" placeholder="Type the synopsis here..."
-                formControlName="synopsis">
+            <textarea rows="8" cols="20" class="synopsis-input" matInput type="synopsis"
+                placeholder="Type the synopsis here..." formControlName="synopsis">
             </textarea>
             <button mat-button *ngIf="synopsis" matSuffix mat-icon-button aria-label="Clear" (click)="clearSynopsis()">
                 <mat-icon>close</mat-icon>
@@ -30,4 +30,30 @@
 
     </form>
 
+    <span class="nb-comments"  (click)="toggleShow()">14 comments</span>
+    <hr>
+    <div class="comments"  *ngIf="isShown">
+        
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est eius velit, culpa consectetur saepe, cupiditate
+            obcaecati, quibusdam tempora quidem laboriosam tempore animi ipsa modi eaque perferendis? Quisquam provident
+            at quod.</p>
+        <span class="from">By username, posted on 22/06/2019</span>
+        <p>comment 2</p>
+        <span class="from">By username, posted on 22/06/2019</span>
+        <p>comment 3</p>
+        <span class="from">By username, posted on 22/06/2019</span>
+        <p>comment 4</p>
+        <span class="from">By username, posted on 22/06/2019</span>
+        <p>comment 5</p>
+        <span class="from">By username, posted on 22/06/2019</span>
+        <p>comment 6</p>
+        <span class="from">By username, posted on 22/06/2019</span>
+        <p>comment 7</p>
+        <span class="from">By username, posted on 22/06/2019</span>
+    </div>
+    <form action="" class="add-comment">
+
+        <textarea cols="64" rows="4" type="text" placeholder="your comment"></textarea>
+        <button mat-raised-button>Send</button>
+    </form>
 </div>
