--- a/src/app/pages/movie/movie.component.scss
+++ b/src/app/pages/movie/movie.component.scss
@@ -56,12 +56,12 @@ h2{
     background-color: #fff;
     color: #fff;
     padding: 20px;
-  
+    border-radius: 10px;
     p{
       box-sizing: border-box;
       color: #333;
       border-radius: 6px;
-      width: 80%;
+      width: 85%;
       text-align: left;
       height: 50px;
       margin:3px auto;
@@ -74,6 +74,13 @@ h2{
       color:#aaa;
       font-size: 0.7rem;
       margin-left: 50%;
+    }
+    .view-more{
+      margin-left: 60%;
+      margin-top: 40px;
+      span{
+        color:#333;
+      }
     }
   }
   .add-comment{
