Sp/ get all comments on all movies, need to be filtered with UserId and Movieid

--- a/src/app/core/pages/add-comment/add-comment.component.html
+++ b/src/app/core/pages/add-comment/add-comment.component.html
@@ -5,7 +5,7 @@
     <div class="comments" *ngIf="isShown">
 
         <p>{{comment.comment}}</p>
-        <span class="from">By username, {{comment.date}}</span>
+        <span class="from">By / insert username/ , /insert date /</span>
        
         <!-- if nbcoms > 7 ... -->
         <div class="view-more"><span> More +</span></div>
