--- a/src/app/pages/movie/movie.component.html
+++ b/src/app/pages/movie/movie.component.html
@@ -1,34 +1,66 @@
-<!-- <p>{{ movie | json }}</p> -->
-
 <h1>Movie Detail</h1>
 
-<!-- I'll put the form here -->
+<button mat-raised-button (click)="switchToUpdateMode()">updateMode : {{ updateMode}}</button>
+<button mat-raised-button (click)="showMovie()">showMovie</button>
+
 <div class="movie-detail">
-    <h2> {{movie.title}} <span>[{{movie.originalTitle}}]</span> </h2>
-    <h3 *ngIf="movie.director !== null"> {{movie.director.name}}</h3>
-    <h3>({{movie.year}})</h3>
-    <h3 *ngIf="movie.duration !== null">{{movie.duration}} min</h3>
-    <h4>{{movie.genre}}</h4>
+    <div class="view-mode" *ngIf="!updateMode">
+        <h2> {{movie.title}} <span>[{{movie.originalTitle}}]</span> </h2>
+        <h3 *ngIf="movie.director !== null"> {{movie.director.name}}</h3>
+        <h3>({{movie.year}})</h3>
+        <h3 *ngIf="movie.duration !== null">{{movie.duration}} min</h3>
+        <h4 *ngIf="movie.genre !== null"> Genre : <br> {{movie.genre}}</h4>
+        <h4>Synopsis : <br> {{movie.synopsis}}</h4>
+    </div>
 
-    <form [formGroup]="movieForm">
-        <!-- // TODO : other movie attributes -->
+    <div class="update-mode" *ngIf="updateMode">
+        <form [formGroup]="movieForm">
 
-        <!-- SYNOPSIS -->
-        <mat-form-field class="form-field">
-            <!-- <mat-label>Search a movie, actress, director...</mat-label> -->
-            <mat-label>Modify the synopsis</mat-label>
-            <textarea rows="8" cols="60" class="synopsis-input" matInput type="synopsis"
-                placeholder="Type the synopsis here..." formControlName="synopsis">
-            </textarea>
-            <button mat-button *ngIf="synopsis" matSuffix mat-icon-button aria-label="Clear" (click)="clearSynopsis()">
-                <mat-icon>close</mat-icon>
-            </button>
-        </mat-form-field>
-        <button mat-raised-button (click)="updateSynopsis()" [disabled]="movieForm.invalid">Update synopsis</button>
+            <mat-form-field class="form-field">
+                <mat-label>Title</mat-label>
+                <input matInput type="title" formControlName="title">
+            </mat-form-field>
 
-        <button mat-raised-button (click)="validateDelete()">Delete movie</button>
+            <mat-form-field class="form-field">
+                <mat-label>Original title</mat-label>
+                <input matInput type="originalTitle" formControlName="originalTitle">
+            </mat-form-field>
+            
+            <mat-form-field class="form-field">
+                <mat-label>Director</mat-label>
+                <input matInput type="director" formControlName="director">
+            </mat-form-field>
 
-    </form>
+            <mat-form-field class="form-field">
+                <mat-label>Year</mat-label>
+                <input matInput type="year" formControlName="year">
+            </mat-form-field>
 
-    <app-add-comment></app-add-comment>
+            <mat-form-field class="form-field">
+                <mat-label>Duration</mat-label>
+                <input matInput type="duration" formControlName="duration">
+            </mat-form-field>
+
+            <mat-form-field class="form-field">
+                <mat-label>Genre</mat-label>
+                <input matInput type="genre" formControlName="genre">
+            </mat-form-field>
+
+            <mat-form-field  class="form-field">
+                <mat-label>Synopsis</mat-label>
+                <textarea rows="8" cols="60" class="synopsis-input" matInput type="synopsis"
+                    placeholder="Type the synopsis here..." formControlName="synopsis">
+                </textarea>
+                <button mat-button *ngIf="synopsis" matSuffix mat-icon-button aria-label="Clear" (click)="clearSynopsis()">
+                    <mat-icon>close</mat-icon>
+                </button>
+            </mat-form-field>
+            <button mat-raised-button (click)="updateMovie()" [disabled]="movieForm.invalid">Update Movie</button>
+
+            <button mat-raised-button (click)="validateDelete()">Delete movie</button>
+        </form>
+    </div>
+
 </div>
+
+<app-add-comment></app-add-comment>
