modify buttons updateMovie, delete log as admin

--- a/src/app/pages/add-comment/add-comment.component.html
+++ b/src/app/pages/add-comment/add-comment.component.html
@@ -1,5 +1,9 @@
-<span class="nb-comments" (click)="toggleShow()">{{commentService.commentCounter}} comments </span>
 
+
+<span class="nb-comments" (click)="toggleShow()">
+    {{commentService.commentCounter}} comments </span>
+
+   
 <hr>
 <div class="comments" *ngIf="isShown">
     <div class="" *ngFor="let comment of commentsOb | async">
