--- a/src/app/pages/movie/movie.component.scss
+++ b/src/app/pages/movie/movie.component.scss
@@ -15,6 +15,9 @@ h2{
     margin: auto;
     text-align: center;
     padding: 30px;
+    button{
+      margin: 4px;
+    }
     form{
       padding: 12px;
       width: 74%;
